# rsomics-plink-model

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs  model.rs  stats.rs
tests/: compat.rs
tests/golden/: sample.bed  sample.bim  sample.fam  sample.model.expected
