[package]
name = "rsomics-plink-model"
version = "0.1.2"
description = "PLINK1 full case/control genotypic association (--model): GENO, TREND, ALLELIC, DOM, REC"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-plink-model"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-plink-model"
path = "src/main.rs"

[lib]
name = "rsomics_plink_model"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "bench"
harness = false

[dependencies]
rsomics-pgen = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
ryu = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
